--- a/app/styles/modules/_config.scss
+++ b/app/styles/modules/_config.scss
@@ -48,9 +48,11 @@ $panel-shadow:0 0.8px 3px 0 rgba(0, 0, 0, 0.22);
 $post-shadow:0 1px 2px 0 rgba(0, 0, 0, 0.22); /* Posts intentionally have a more subtle shadow than forms/panels */
 
 //forms
-$input-padding:9px 12px;
+$input-padding-top-bottom:9px;
+$input-padding:$input-padding-top-bottom 12px;
 $button-font-size:14.5px;
 $input-font-size:14.5px;
+$input-line-height:21px;
 $input-height-base:42px;
 $button-height-base:35px;
 $form-group-margin:$main-cont-margin-bottom;
